--- a/templates/item/item-rangedWeapon-sheet.hbs
+++ b/templates/item/item-rangedWeapon-sheet.hbs
@@ -18,8 +18,15 @@
                 <td>Equipped: <input type="checkbox" name="system.itemEquipped" {{checked system.itemEquipped}} /></td>
                 <td>Energy Weapon: <input type="checkbox" name="system.energyWeapon" {{checked system.energyWeapon}} /></td>
             </tr>
-         </table>
-
+        </table>
+        <table class="equipped-stats">
+            <tr>
+                <td>Ability</td>
+                <td>
+                        <input style="width:200px;" type="text" name="system.abilityMod" value="{{system.abilityMod}}" />
+                </td>
+            </tr>
+        </table>
 
     </div>
   </header>
