--- a/templates/item/item-rangedWeapon-sheet.hbs
+++ b/templates/item/item-rangedWeapon-sheet.hbs
@@ -73,37 +73,39 @@
         </tr>
         <tr>
             <td>Ammo</td>
+            <td>Ammo Default</td>
             <td>Capacity</td>
             <td>Load</td>
             <td>Crit Roll</td>
             <td>Crit Bonus</td>
         </tr>
         <tr>
-          <td>
-            <input type="text" name="system.ammo.type" value="{{ system.ammo.type }}" />
-          </td>
-          <td style="display: flex; align-items: center">
-              <input type="number"
-                     name="system.ammo.capacity.value"
-                     value="{{ system.ammo.capacity.value }}" />
-              /
-              <input type="number"
-                     name="system.ammo.capacity.max"
-                     value="{{ system.ammo.capacity.max }}" />
-          </td>
-          <td>
-            <input type="number" name="system.load" value="{{ system.load }}" />
-          </td>
-          <td>
-            <input type="text" name="system.critical.bonus" value="{{ system.critical.bonus }}" />
-          </td>
-          <td>
-            <input
-              type="text"
-              name="system.critical.multiplier"
-              value="{{ system.critical.multiplier }}"
-            />
-          </td>
+            <td>
+                <input type="text" name="system.ammo.type" value="{{ system.ammo.type }}" />
+            </td>
+            <td>
+                <input type="text" name="system.ammo.assigned" value="{{ system.ammo.assigned }}" />
+            </td>
+            <td style="display: flex; align-items: center">
+                <input type="number"
+                       name="system.ammo.capacity.value"
+                       value="{{ system.ammo.capacity.value }}" />
+                /
+                <input type="number"
+                       name="system.ammo.capacity.max"
+                       value="{{ system.ammo.capacity.max }}" />
+            </td>
+            <td>
+                <input type="number" name="system.load" value="{{ system.load }}" />
+            </td>
+            <td>
+                <input type="text" name="system.critical.bonus" value="{{ system.critical.bonus }}" />
+            </td>
+            <td>
+                <input type="text"
+                       name="system.critical.multiplier"
+                       value="{{ system.critical.multiplier }}" />
+            </td>
         </tr>
       </table>
       <table class="equipped-stats" style="width:300px;">
