--- a/templates/actor/dialog/attack.hbs
+++ b/templates/actor/dialog/attack.hbs
@@ -19,6 +19,10 @@
             <input type="radio" id="disadvantage" name="mode" value="disadvantage" {{{setChecked content.options.mode 'disadvantage'}}}/>
             <label for="disadvantage">Disadvantage</label>
         </div>
+        <div data-tooltip="Target beyond long range, Nat 20 required to hit">
+            <input type="radio" id="hailmary" name="mode" value="normal" {{{setChecked content.options.mode 'hailmary'}}}/>
+            <label for="hailmary">Hail Mary!</label>
+        </div>
     </div>
     <div>
     <div class="form-group">
