--- a/templates/actor/status/passives.hbs
+++ b/templates/actor/status/passives.hbs
@@ -98,3 +98,28 @@
     </td>
   </tr>
 </table>
+
+<table>
+    <tr>
+        <td>
+            <div>
+                <div 
+                     class="limb head"
+                     data-limb="head"></div>
+                <div 
+                     class="limb l-arm"
+                     data-limb="l-arm"></div>
+                <div class="limb torso"
+                     data-limb="torso"></div>
+                <div class="limb r-arm"
+                     data-limb="r-arm"></div>
+                <div class="limb l-leg"
+                     data-limb="l-leg"></div>
+                <div class="limb r-leg"
+                     data-limb="r-leg"></div>
+
+            </div>
+        </td>
+    </tr>
+</table>
+
