targeted attack grid

--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -2,6 +2,7 @@
 @import 'base.css';
 @import 'dialog.css';
 @import 'grant.css';
+@import 'targeted-attack.css';
 
 /* Global styles */
 @font-face {
