--- a/templates/actor/items/equipped-melee-weapons.hbs
+++ b/templates/actor/items/equipped-melee-weapons.hbs
@@ -35,7 +35,7 @@
                     class="rollable resource-label"
                     data-rollable
                     data-label="OUCH! DMG from a {{ item.name }}"
-                    data-roll="{{ item.system.damage.formula }}"
+                    data-roll="{{ item.system.damage.formula }} + @{{item.system.abilityMod}}.mod"
                   >
                     {{ item.system.damage.formula }}
                   </div>
