--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -131,11 +131,10 @@
       <div class="tab crafting" data-group="primary" data-tab="crafting">
         {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-crafting.hbs"}}
       </div>
-      {{!-- Notes Tab --}}
+      {{!-- Crafting Tab --}}
       <div class="tab notes" data-group="primary" data-tab="notes">
         {{> "systems/arcane-arcade-fallout/templates/actor/parts/actor-notes.hbs"}}
       </div>
-
       {{#GM}}
       {{!-- Effects Tab --}}
       <div class="tab effects" data-group="primary" data-tab="effects">
