--- a/templates/actor/parts/actor-notes.hbs
+++ b/templates/actor/parts/actor-notes.hbs
@@ -2,7 +2,7 @@
 <table>
   <tr>
     <td class="fallout-character-notes">
-      {{editor system.biography target="system.biography" button=falue engine="prosemirror" collaborate=false}}
+      {{editor system.biography target="system.biography" button=falue  collaborate=false}}
     </td>
   </tr>
 </table>
