--- a/templates/actor/parts/actor-notes.hbs
+++ b/templates/actor/parts/actor-notes.hbs
@@ -1,8 +1,8 @@
 <h3>Notes:</h3>
 <table>
-  <tr>
-    <td class="fallout-character-notes">
-      {{editor system.biography target="system.biography" button=falue  collaborate=false}}
-    </td>
-  </tr>
+    <tr>
+        <td style="background:#222;height: 400px; text-align: left; padding: 10px">
+            {{editor system.properties target="system.properties" rollData=rollData button=true owner=owner editable=editable engine="prosemirror"}}
+        </td>
+    </tr>
 </table>
