--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -11,15 +11,15 @@
                        data-item-id="{{ item._id }}"
                        title="{{localize 'DOCUMENT.Update' type='item'}}">
                         {{item.name}}({{item.system.quantity}})
-                    </a>                
-                    <a class="item-control item-delete"title="{{localize 'DOCUMENT.Delete' type='item'}}">
+                    </a>
+                    <a class="item-control item-delete" title="{{localize 'DOCUMENT.Delete' type='item'}}">
                         <i class="fas fa-trash"></i>
                     </a>
                     <a style="float: right; margin-left: 10px"
-                        data-equip
-                        data-item-id="{{ item._id }}"
-                        class="item-control"
-                        title="Equip a weapon">
+                       data-equip
+                       data-item-id="{{ item._id }}"
+                       class="item-control"
+                       title="Equip a weapon">
                         <i class="fas fa-tshirt"></i>
                     </a>
                 </div>
@@ -40,10 +40,10 @@
                         <i class="fas fa-trash"></i>
                     </a>
                     <a style="float: right; margin-left: 10px"
-                        data-equip
-                        data-item-id="{{ item._id }}"
-                        class="item-control"
-                        title="Equip a weapon">
+                       data-equip
+                       data-item-id="{{ item._id }}"
+                       class="item-control"
+                       title="Equip a weapon">
                         <i class="fas fa-tshirt"></i>
                     </a>
                 </div>
@@ -64,10 +64,10 @@
                         <i class="fas fa-trash"></i>
                     </a>
                     <a style="float: right; margin-left: 10px"
-                        data-equip
-                        data-item-id="{{ item._id }}"
-                        class="item-control"
-                        title="Equip an armor">
+                       data-equip
+                       data-item-id="{{ item._id }}"
+                       class="item-control"
+                       title="Equip an armor">
                         <i class="fas fa-tshirt"></i>
                     </a>
                 </div>
@@ -76,6 +76,7 @@
             {{/each}}
         </td>
     </tr>
+    {{> "systems/arcane-arcade-fallout/templates/actor/items/ammo.hbs" ammos=ammos}}
 </table>
 
 <table class="backpack">
@@ -84,7 +85,7 @@
             <table class="equipped-stats">
                 <tr><td colspan="999"><h3>Food and Drinks</h3></td></tr>
                 <div>
-                <tr><td>Name</td><td>Qty</td><td>Properties</td><td></td></tr>
+                <tr><td>Name</td><td style="width:80px;">Qty</td><td>Properties</td><td></td></tr>
                 {{#each foodAnddrinks as |item id|}}
                 <tr>
                     <td style="width: 100px">
@@ -158,7 +159,7 @@
             <div>
                 <table class="equipped-stats">
                     <tr><td colspan=999><h3>MISC ITEMS</h3></td></tr>
-                    <tr><td>Name</td><td>Qty</td><td></td></tr>
+                    <tr><td>Name</td><td style="width:80px">Qty</td><td></td></tr>
                     {{#each miscItems as |item id|}}
                     <tr>
                         <td class="item-label">
